--- a/Balloon-game/game.html
+++ b/Balloon-game/game.html
@@ -55,7 +55,7 @@ body{
    
 	height:60px;
 	width:60px;
-	background-image: url("skull.jpg");
+	background-image: url("skull.png");
 	background-size: 60px 60px;
     background-repeat: no-repeat;
 	-webkit-border-radius: 30px;
